[package]
name = "pwcheck"
description = "Provides a function to validate a username & password on Linux, MacOS, and Windows"
version = "0.2.0"
rust-version = "1.64"
edition = "2021"
authors = ["Chip Senkbeil <chip@senkbeil.org>"]
categories = ["authentication"]
keywords = ["password", "security"]
homepage = "https://github.com/chipsenkbeil/pwcheck"
repository = "https://github.com/chipsenkbeil/pwcheck"
readme = "README.md"
license = "MIT OR Apache-2.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_Security"] }

[target.'cfg(target_os = "linux")'.dependencies]
pam-client = { version = "0.5.0", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
portable-pty = "0.8.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
